[package]
name = "vm-connect"
version = "0.1.0"
edition = "2024"

[dependencies]
anyhow = "1.0.98"
aws-config = "1.6.2"
aws-sdk-ssm = "1.75.0"
clap = { version = "4.5.38", features = ["derive"] }
crossbeam-channel = "0.5.15"
ctrlc = "3.4.7"
ctrlc-async = "3.2.2"
eframe = "0.31.1"
egui = "0.31.1"
serde = { version = "1.0.219", features = ["derive"] }
serde_json = "1.0.140"
thiserror = "2.0.12"
tokio = { version = "1.45.0", features = ["full"] }
tokio-tungstenite = "0.26.2"
tracing-subscriber = "0.3.19"
tungstenite = "0.26.2"
